# bazel_demo

./: BUILD.bazel  WORKSPACE  index.html  package-lock.json  package.json
src/: es5.babelrc  es5_test.babelrc  index.js  strings.en.js
test/: index.spec.js
